# jump

./: .doxygen  .gitignore  .jade_config  CMakeLists.txt  Readme.md  package.xml
cmake/: jpcConfig.cmake.in  jumpConfig.cmake.in  jumpMacros.cmake  justPackage.cmake
docs/: dependencies.md  device_interface.md  interface.md  jump_cmake.md  random.md  shared_ptr.md  view_musing.md  why.md
include/jpc/: test.h
include/jump/: array.hpp  array_old.hpp  atomic.hpp  device_interface.hpp  math.hpp  memory_buffer.hpp  multi_array.hpp  octree.hpp  parallel.hpp  random.hpp  shared_ptr.hpp  string.hpp  string_utils.hpp  string_view.hpp  tensor_array.hpp  threadpool.hpp  variant.hpp  yaml.hpp
include/jump/legacy/: multi_array.hpp
include/jump_testing/: interopable_test_runner.hpp
src/: main.cpp  test.cu
src/examples/: array.cpp  array_examples.cpp  device_interface.cpp  memory_buffer.cpp  multi_array.cpp  octree.cpp  parallel.cpp  random.cpp  reduction.cpp  shared_ptr_examples.cpp  threadpool.cpp  yaml_example.cpp
src/sandbox/: indices_testing.cpp  reduction_testing.cpp
src/tests/: array.cpp  atomic.cpp  memory_buffer.cpp  multi_array.cpp  multi_array_no_cuda.cpp  shared_ptr.cpp  string.cpp  string_view.cpp  tensor_array.cpp  variant.cpp
src/tests/legacy/: array_no_cuda.cpp  multi_array.cpp  shared_ptr_no_cuda.cpp
